Revert "SAK-49994 Gradebook fix quick entry in ES locale (#13361)"
This reverts commit 008c85e7adcaf8053936bfc92381cfd7e8257cd6.